fixed padding on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,7 +119,7 @@ footer {
 }
 
 .aboutmeimg{
-    max-width: 900px;
+    max-width: 75%;
 }
 
 
@@ -148,10 +148,20 @@ footer {
     }
 
     .aboutmeimg{
-        max-width: 450px;
+        max-width: 100%;
     }
 
     .aboutmeimg img{
-    width: 450px; 
+    width: 100%; 
+    }
+    main {
+        max-width: 100%;
+        margin: 0px auto;
+        padding: 0px;
+        background-color: #2e2e2e;
+        border: 1px solid #444;
+        border-radius: 10px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+        color: #e0e0e0;
     }
 }
